[package]
name = "suitesparse-sys"
version = "0.1.0"
edition = "2021"
description = "sys crate for suitesparse library"
license = "MIT"
authors = ["Martin Robinson <martinjrobins@gmail.com>"]
repository = "https://github.com/martinjrobins/suitesparse-sys"

[dependencies]

[build-dependencies]
bindgen = "0.69.4"
cmake = "0.1.50"
pkg-config = "0.3.30"

[features]
default = ["klu", "amd", "colamd", "btf", "static_libraries", "build_vendor"]
static_libraries = []
build_vendor = []
mongoose = []
amd = []
btf = []
camd = []
ccolamd = []
colamd = []
cholmod = []
cxsparse = []
ldl = []
klu = []
umfpack = []
paru = []
rbio = []
spqr = []
spex = []
graphblas = []
lagraph = []